--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="info-box">
                             <div class="info-title">
                                 <h3>Weather App</h3>
-                                <a href="https://github.com/Akshat1644/Prasunet_WD_05">Live Preview<i
+                                <a href="http://127.0.0.1:5500/3/index.html">Live Preview<i
                                         class='bx bx-link-external'></i></a>
                             </div>
                             <p>Tech Used:</p>
