--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </p>
 
                     <div class="btn-box">
-                        <a href="https://drive.google.com/file/d/1IkVGfEGw0c5q0m1RhverLwVwU7jBjXT_/view?usp=sharing"
+                        <a href="https://drive.google.com/drive/search?q=resume"
                             class="btn">Download CV</a>
                         <a href="#" class="btn contact-me">Contact Me</a>
 
@@ -56,7 +56,7 @@
 
                     <div class="workeduc-box">
                         <div class="workeduc-content">
-                            <span class="year"><i class='bx bx-calendar'></i>2022-2023</span>
+                            <span class="year"><i class='bx bx-calendar'></i>06/2022-07/2022</span>
                             <h3>Web Developer-DRDO</h3>
                             <p>At the Defence Research and Development Organisation (DRDO), I specialize in designing,
                                 developing, and maintaining secure and efficient web applications tailored to the needs
@@ -64,17 +64,17 @@
                         </div>
 
                         <div class="workeduc-content">
-                            <span class="year"><i class='bx bx-calendar'></i>2023-2024</span>
-                            <h3>Web Developer-LearnTricks</h3>
-                            <p>At LearnTricks, I am dedicated to creating, maintaining, and enhancing our educational
+                            <span class="year"><i class='bx bx-calendar'></i>06/2023-07/2023</span>
+                            <h3>Web Developer-Prasunet</h3>
+                            <p>At Prasunet, I am dedicated to creating, maintaining, and enhancing our educational
                                 platform to provide an exceptional user experience for our learners.</p>
                         </div>
 
                         <div class="workeduc-content">
-                            <span class="year"><i class='bx bx-calendar'></i>2024-Present</span>
-                            <h3>Web Developer-Prasunet</h3>
-                            <p>As a web developer at Prasunet, I am dedicated to crafting, maintaining, and enhancing
-                                websites and web applications to meet diverse client needs. At Prasunet, my
+                            <span class="year"><i class='bx bx-calendar'></i>07/2024-09/2024</span>
+                            <h3>Web Developer-Zidio Development</h3>
+                            <p>As a web developer at Zidio Development, I am dedicated to crafting, maintaining, and enhancing
+                                websites and web applications to meet diverse client needs. At Zidio Development, my
                                 responsibilities involve developing user-friendly interfaces and ensuring cross-platform
                                 compatibility.</p>
                         </div>
