--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </p>
 
                     <div class="btn-box">
-                        <a href="https://drive.google.com/drive/search?q=resume"
+                        <a href="https://drive.google.com/file/d/1qmWaChoBw-NPTSMOnPsQc7xrDTNP68PK/view?usp=sharing"
                             class="btn">Download CV</a>
                         <a href="#" class="btn contact-me">Contact Me</a>
 
